@@ -176,6 +176,8 @@ Release 0.5.0 - Unreleased
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-593 webhcat system tests don't work as per the instructions (thejas via gates)
+
   HCAT-596 fix releaseaudit and automate running (traviscrawford)
 
   HCAT-587 webhcat controller map task takes too much memory (thejas via traviscrawford)
